run location decided by algorithm

--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,9 @@ body{
 #selectServer, #inputCompact{
   height: 30px;
 }
-
+.highlighted{
+  border: 3px solid black;
+}
 #error-msg{
   color: red;
 }
