--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,18 @@ body{
   z-index: 0;
 }
 
-
+.legend .circle {
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  margin-top: 8px;
+  display: inline;
+}
+.info{
+  background: whitesmoke;
+  border: solid gray;
+  border-radius: 10px;
+}
 #boxed-form, #generated-box {
   border: 3px solid gray;
   border-radius: 10px;
